My first commit

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Collaborative development using Git repositories.</p>
 
             // Prepare the data to send to the EmailJS template
             const templateParams = {
-                name,
+                from_name,
                 email,
                 message,
             };
